--- a/index.html
+++ b/index.html
@@ -522,7 +522,7 @@
         (function() {
             const credits = parseInt(localStorage.getItem('omega_arcade_credits') || '0', 10);
             if (!credits || credits < 5) {
-                window.location.href = 'arcade-entry.html';
+                window.location.href = 'https://omega-arcade.vercel.app/';
             }
         })();
 
